@@ -534,6 +534,7 @@ Localization
         #LOC_BDArmory_PilotAI_Terrain = Terrain Avoidance
         #LOC_BDArmory_TurnRadiusTwiddleFactorMin = Terrain Avoidance Tuning Min
         #LOC_BDArmory_TurnRadiusTwiddleFactorMax = Terrain Avoidance Tuning Max
+        #LOC_BDArmory_WaypointTerrainAvoidance = Waypoint Terrain Avoidance
         
         #LOC_BDArmory_PilotAI_Ramming = Ramming
         #LOC_BDArmory_ControlSurfaceLag = Ramming Control Surface Lag
@@ -595,6 +596,7 @@ Localization
         #LOC_BDArmory_AIWindow_ExtendDist = Sets when target is too close to turn towards
         #LOC_BDArmory_AIWindow_terrainMin = Turn radius multiplier for ideal craft orientation
         #LOC_BDArmory_AIWindow_terrainMax = Turn radius multiplier for inverted craft orientation
+        #LOC_BDArmory_AIWindow_WaypointTerrainAvoidanceContext = Range and strength of waypoint terrain awareness correction
         #LOC_BDArmory_AIWindow_ramLag = Ram trajectory correction for control surfaces' lag
         #LOC_BDArmory_AIWindow_orbit = Direction of non-combat cruising
         #LOC_BDArmory_AIWindow_standby = AI turns on when target enters Guard Range
@@ -626,6 +628,7 @@ Localization
         #LOC_BDArmory_AIWindow_Terrain = Terrain
         #LOC_BDArmory_AIWindow_TurnRadiusMin = Terrain Avoid Min
         #LOC_BDArmory_AIWindow_TurnRadiusMax = Terrain Avoid Max
+        #LOC_BDArmory_AIWindow_WaypointTerrainAvoidance = WP Terrain Avoid
         #LOC_BDArmory_AIWindow_ControlSurfaceLag = Control srf. Lag
 
         //Pilot AI infolink
@@ -663,7 +666,7 @@ Localization
         #LOC_BDArmory_AIWindow_EvadeHelp_ExtendVel = Extend Target Velocity - This tells the AI at what relative velocity it should consider extending. Less than 1, the target craft must be slower, greater than 1, faster.
         #LOC_BDArmory_AIWindow_EvadeHelp_Nonlinearity = Evasion/Extension Nonlinearity - This controls the radius of the oscillation (in degrees) around the fly-to direction that the plane will make while evading or extending. This helps plane not fly in a straight line when evading/extending.
 
-        #LOC_BDArmory_AIWindow_TerrainHelp = Terrain Avoidance is used to predict collisions with the ground, by scaling the craft's turn radius to generate a terrain collision distance to tell the AI if it needs to pull up. The Terrain Avoid Min value is based on optimum flight conditions, with the plane parallel to the ground and only needs to pitch up. Terrain Avoid Max is based on the worst case scenerio with the plane inverted to the ground, and needs to roll 180 degrees before pitching up.
+        #LOC_BDArmory_AIWindow_TerrainHelp = Terrain Avoidance is used to predict collisions with the ground, by scaling the craft's turn radius to generate a terrain collision distance to tell the AI if it needs to pull up. The Terrain Avoid Min value is based on optimum flight conditions, with the plane parallel to the ground and only needs to pitch up. Terrain Avoid Max is based on the worst case scenerio with the plane inverted to the ground, and needs to roll 180 degrees before pitching up. Waypoint Terrain Avoidance affects the range and strength of the adjustment to the fly-to direction due to terrain being between the craft and the current waypoint.
 
         #LOC_BDArmory_AIWindow_RamHelp = Ramming controls if the craft should attempt to ram other craft when it is out of ammo or no longer has working weapons. If ramming is not enabled, the AI will instead continue to maneuver, but be unable to engage. Control Surface lag sets how much the AI should correct collision predictions, based on how long control surfaces take to reach full deflection. 
 
